link to shinyapps added to main README

--- a/README.html
+++ b/README.html
@@ -382,7 +382,7 @@ $(document).ready(function () {
 <div id="lelo-gemtessa-shinichiro-aoyagi-darian-baruso" class="section level3">
 <h3>Lelo Gemtessa, Shinichiro Aoyagi, Darian Baruso</h3>
 <div id="link-to-the-shinyapps.io-web-page" class="section level4">
-<h4><a href>Link to the shinyapps.io web page</a></h4>
+<h4><a href="https://daarusba.shinyapps.io/FilmStatsonGenre/">Link to the shinyapps.io web page</a></h4>
 </div>
 <div id="link-to-the-origin-of-the-dataset" class="section level4">
 <h4><a href="https://www.kaggle.com/tmdb/tmdb-movie-metadata#tmdb_5000_movies.csv">Link to the origin of the dataset</a></h4>
@@ -400,7 +400,7 @@ $(document).ready(function () {
 </div>
 <div id="about-the-data" class="section level2">
 <h2>About the Data</h2>
-<p>The data itself is in the form of a csv file from the website, <a href="https://www.kaggle.com/">Kaggle</a>. They generated the data set using The Movie Database’s API. They, and by extension Group LSD, would like to emphasize that their product uses the TMDb API but is not endorsed or certified by TMDb itself. The data set <em>was</em> created within the year 2017, so it therefore does not contain any information on films released after its conception, and is further limited to what was available on TMDb at the time/what was accessed. This means that certain contemporary films that would skew the data, such as Avengers: Endgame, are absent. Oddly enough, and although we did not extensively search for more individual cases, Get Out (2017) is also absent from the data set. This, again, brings into focus that the data set is limited to what was available/what was accessed from TMDb.</p>
+<p>The data itself is in the form of a csv file from the website, <a href="https://www.kaggle.com/tmdb/tmdb-movie-metadata#tmdb_5000_movies.csv">Kaggle</a>. They generated the data set using The Movie Database’s API. They, and by extension Group LSD, would like to emphasize that their product uses the TMDb API but is not endorsed or certified by TMDb itself. The data set <em>was</em> created within the year 2017, so it therefore does not contain any information on films released after its conception, and is further limited to what was available on TMDb at the time/what was accessed. This means that certain contemporary films that would skew the data, such as Avengers: Endgame, are absent. Also, we isolated the genres to those among the most popular of 2017, omitting genres such as “Family.” Oddly enough, and although we did not extensively search for more individual cases, Get Out (2017) is also absent from the data set. This, again, brings into focus that the data set is limited to what was available/what was accessed from TMDb. Some specific examples of limited availability in the data include if a movie had yet to be released, a small sample size of reviews, a lack of released data, et cetera.</p>
 </div>
 </div>
 
